# coinjoin_parser

./: .env.example  .gitignore  main.py  pyproject.toml
api_clients/: __init__.py  entity_client.py  mempool_client.py
clustering/: __init__.py  cj_tx_data_collection.py  clustering_algo.py
config/: settings.py
data/: __init__.py  create_data_base.py  inset_raw_round_data_in_db.py
deanonymization/: anonsettest.py
models/: __init__.py  coinjoin_data.py  coinjoin_data_collection.py  database_connection.py  transaction_processor.py
raw_cj_round_data/: test_coinjoin_data.json
tests/: test_data_collection.py
